1998-05-28  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: embraced every variable with "" to make 
	it consistent

	* acinclude.m4.in: various fixes for the koffice checks 
	(mico, ministl and python)

1998-05-16  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: don't use KDE_CHECK_QT_DIRECT, when 
	--with-qt-libs are given

1998-04-21  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: cool, I found the trick to suppress the ls 
	errors

1998-04-20  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: rewrote the qt checking test, since it
	didn't work under FreeBSD, since it relied on the .so link.
	The new version is a little bit buggy, but I need some testing
	to make it perfect

	* acinclude.m4.in: fixed the side effects of the PAM test 

1998-04-18  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: hopefully fixed the PAM test (I rewrote it)

1998-04-16  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: extended the getsockname test inspired 
	by a patch by Martin Baulig

	* configure.in: added test for utmp file 

	* acinclude.m4.in: made --without-pam default
	

1998-04-06  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: don't test compiling, linking, running in
	one step. This proved to be too dangerous for my mail box.
	
1998-03-21  Stephan Kulow  <coolo@kde.org>

	* libtool.m4.in: created some new macros to work around this 
	ugly (because long) help of configure --enable-shared/static

1998-03-05  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: set language to C++ before trying the ksize_t 
	test

	* configure.in: sorted the Makefile entries alphabeticly (and all 
	together: we love xemacs! we love xemacs! ;)
	
	* configure.in: added sk 

	* acinclude.m4.in: substitute x_libraries to fix the empty -rpath
	
1998-03-03  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: add a rpath for every shared library, that is 
	linked too (especially X11 libraries)
	
Tue Feb 24 22:04:59 1998  Stephan Kulow  <coolo@kde.org>
